# iota

./: .clippy.toml  .dockerignore  .gitattributes  .gitignore  .license_ignore  .licenseignore  .npmrc  .prettierignore  .typos.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  REVIEW.md  RUST_CONVENTIONS.md  binary-build-list.json  deny.toml  dprint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  turbo.json
crates/iota-common/: Cargo.toml
crates/iota-common/src/: lib.rs  logging.rs  metrics.rs  moving_window.rs  random_util.rs
crates/iota-config/: Cargo.toml
crates/iota-config/data/: fullnode-template-with-path.yaml  fullnode-template.yaml
crates/iota-config/src/: genesis.rs  lib.rs  local_ip_utils.rs  migration_tx_data.rs  node.rs  p2p.rs  persisted_config.rs  transaction_deny_config.rs  validator_client_monitor_config.rs
crates/iota-gprc-api/: Cargo.toml  README.md  build.rs
crates/iota-gprc-api/src/: error.rs  lib.rs  server.rs
crates/iota-gprc-api/src/conversions/: accounts.rs  checkpoints.rs  coins.rs  common.rs  events.rs  mod.rs  transactions.rs
crates/iota-gprc-api/src/proto_gen/: .gitignore
crates/iota-gprc-api/src/services/: accounts_service.rs  checkpoints_service.rs  coins_service.rs  committee_service.rs  epochs_service.rs  mod.rs  objects_service.rs  system_service.rs  transactions_service.rs
crates/iota-gprc-api/tests/: accounts_service_test.rs  checkpoints_service_test.rs  coins_service_test.rs  committee_service_test.rs  epochs_service_test.rs  objects_service_test.rs  system_service_test.rs  transactions_service_test.rs
crates/iota-grpc-api/: Cargo.toml  README.md  build.rs  debug_flow.md
crates/iota-grpc-api/examples/: capture_all_events.rs  test_checkpoints.rs
crates/iota-grpc-api/proto/: checkpoint.proto  common.proto  event.proto  node.proto  read.proto  transaction.proto  write.proto
crates/iota-grpc-api/src/: bcs_event.rs  checkpoint_service.rs  client.rs  config.rs  conversions.rs  error.rs  event_integration.rs  event_service.rs  lib.rs  node_service.rs  read_service.rs  reader.rs  server.rs  service.rs  transaction_service.rs  types.rs  utils.rs  write_service.rs
crates/iota-grpc-api/src/client/: checkpoint.rs  event.rs  mod.rs  node_client.rs  read.rs  transaction.rs  write.rs
crates/iota-grpc-api/src/conversions/: checkpoints.rs  committee.rs  common.rs  dynamic_fields.rs  epochs.rs  info.rs  mod.rs  objects.rs  system.rs  transactions_execution.rs
crates/iota-grpc-api/src/services/: checkpoints_service.rs  coins_service.rs  committee_service.rs  (+5 more)
crates/iota-grpc-api/tests/: accounts_service_test.rs  api_e2e.rs  checkpoint_e2e.rs  checkpoint_stream.rs  checkpoints_service_test.rs  coins_service_test.rs  committee_service_test.rs  epochs_service_test.rs  event_e2e.rs  objects_service_test.rs  read_e2e.rs  rich_event_filtering.rs  system_service_test.rs  transaction_e2e.rs  transactions_service_test.rs  utils.rs  write_e2e.rs
crates/iota-grpc-client/: Cargo.toml
crates/iota-grpc-client/src/: checkpoint.rs  client.rs  event.rs  interceptors.rs  ledger.rs  lib.rs  node_client.rs  read.rs  response_ext.rs
crates/iota-grpc-server/: Cargo.toml  README.md
crates/iota-grpc-server/src/: constants.rs  error.rs  event_filter.rs  ledger_service.rs  lib.rs  macros.rs  merge.rs  metrics.rs  response.rs  server.rs  server_timing.rs  state_service.rs  traffic_control.rs  transaction_filter.rs  transaction_service.rs  types.rs  utils.rs  validation.rs  write_service.rs
crates/iota-grpc-server/tests/: batching_stream.rs  checkpoint_e2e.rs  checkpoint_e2e.rs.disabled  checkpoint_stream.rs  checkpoint_stream.rs.disabled  event_e2e.rs  ledger_service.rs  ledger_service.rs.disabled  list_owned_objects.rs  read_e2e.rs  state_service.rs  transaction_e2e.rs  utils.rs  write_e2e.rs
crates/iota-grpc-server/tests_ignore/: checkpoint_stream.rs
crates/iota-grpc-server/tests_ignored/: checkpoint_stream.rs
crates/iota-grpc-types/: Cargo.toml  build.rs
crates/iota-grpc-types/src/: bcs.rs  epoch.rs  events.rs  headers.rs  ledger_service.rs  lib.rs  object.rs  read_masks.rs  transaction.rs  transactions.rs
crates/iota-indexer-streaming/: Cargo.toml
crates/iota-indexer-streaming/src/: error.rs  memory.rs
crates/iota-kvstore/: Cargo.toml  README.md  init.sh
crates/iota-kvstore/src/: lib.rs  main.rs
crates/iota-metrics-push-client/: Cargo.toml
crates/iota-metrics-push-client/src/: client.rs  lib.rs
crates/iota-rust-sdk/: Cargo.toml
crates/iota-rust-sdk/src/: lib.rs
crates/iota-synthetic-ingestion/: Cargo.toml
crates/iota-synthetic-ingestion/src/: synthetic_ingestion.rs
crates/iota-tool/: Cargo.toml
crates/iota-tool/src/: commands.rs  fire_drill.rs  genesis_ceremony.rs  genesis_inspector.rs  lib.rs
crates/iota-types/: Cargo.toml
crates/iota-types/benches/: global_state_hash_bench.rs
crates/iota-types/src/: account.rs  balance.rs  balance_change.rs  base_types.rs  clock.rs  coin.rs  coin_manager.rs  collection_types.rs  committee.rs  config.rs  crypto.rs  deny_list_v1.rs  derived_object.rs  dev_inspect.rs  digests.rs  display.rs  dry_run.rs  dynamic_field.rs  epoch_info.rs  error.rs  event.rs  executable_transaction.rs  execution.rs  execution_status.rs  filter.rs  full_checkpoint_content.rs  gas.rs  gas_coin.rs  global_state_hash.rs  governance.rs  grpc.rs  id.rs  in_memory_storage.rs  inner_temporary_store.rs  iota_sdk_types_conversions.rs  iota_serde.rs  layout_resolver.rs  lib.rs  message_envelope.rs  messages_checkpoint.rs  (+25 more)
crates/iota-types/tests/: serde_tests.rs
crates/simulacrum/: Cargo.toml
crates/simulacrum/src/: epoch_state.rs  grpc.rs  grpc_server.rs  lib.rs  state_reader.rs  transaction_executor.rs
crates/starfish/config/: Cargo.toml
crates/starfish/core/: Cargo.toml  build.rs
crates/starfish/dag-visualizer-proto/: Cargo.toml  build.rs
examples/custom-indexer/rust/: Cargo.toml  hybrid_reader.rs  local_reader.rs  remote_reader.rs  remote_reader_with_filters.rs
examples/simulacrum/grpc/: Cargo.toml  complete_grpc_workflow.rs
examples/tic-tac-toe/cli/: Cargo.toml
(+3265 files in other folders)
