[package]
name = "iota-common"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
anyhow.workspace = true
futures.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rand.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

# internal dependencies
iota-macros.workspace = true
iota-metrics.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
