[package]
name = "iota-config"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
anyhow = { workspace = true, features = ["backtrace"] }
once_cell.workspace = true
rand.workspace = true
serde.workspace = true
tracing.workspace = true

# internal dependencies
iota-types.workspace = true
move-vm-config.workspace = true

# Heavy node-side deps (network, file IO, key management). Gated so they're
# excluded from the wasm32 build.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# external dependencies
anemo.workspace = true
bcs.workspace = true
clap.workspace = true
csv.workspace = true
dirs.workspace = true
fastcrypto.workspace = true
object_store.workspace = true
prometheus.workspace = true
reqwest.workspace = true
serde_yaml.workspace = true

# internal dependencies
iota-genesis-common.workspace = true
iota-keys.workspace = true
iota-names.workspace = true
starfish-config.workspace = true
