[package]
name = "iota-gprc-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio.workspace = true
futures.workspace = true
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
async-trait.workspace = true
tower.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
bcs.workspace = true
anyhow.workspace = true
hex.workspace = true

iota-types.workspace = true
iota-sdk2.workspace = true
move-core-types.workspace =true
iota-protocol-config.workspace = true

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
futures.workspace = true
shared-crypto.workspace = true
rand.workspace = true
iota-types.workspace = true
iota-protocol-config.workspace = true
fastcrypto.workspace = true