[package]
name = "iota-grpc-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# external dependencies
async-stream = "0.3"
bcs.workspace = true
futures.workspace = true
prost.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true

# internal dependencies
iota-grpc-types.workspace = true
iota-types.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
# external dependencies
anyhow.workspace = true

# internal dependencies
iota-config.workspace = true
move-core-types.workspace = true
simulacrum.workspace = true
test-cluster.workspace = true

[[example]]
name = "simulacrum_grpc_workflow"
path = "../../examples/simulacrum/grpc/complete_grpc_workflow.rs"
