[package]
name = "iota-grpc-client"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
anyhow.workspace = true
futures.workspace = true
serde_json.workspace = true
tonic.workspace = true

# internal dependencies
iota-grpc-types.workspace = true
iota-json-rpc-types.workspace = true
iota-types.workspace = true
move-core-types.workspace = true
