[package]
name = "iota-grpc-types"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
bcs.workspace = true
iota-sdk2.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
tap.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

# internal dependencies
iota-json-rpc-types.workspace = true
iota-types.workspace = true
