[package]
name = "iota-kvstore"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
clap.workspace = true
iota-bigtable = { git = "https://github.com/iotaledger/iota-bigtable.git", tag = "v0.1.0" }
serde.workspace = true
strum.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true

# internal dependencies
iota-data-ingestion-core.workspace = true
iota-sdk-types.workspace = true
iota-types.workspace = true
telemetry-subscribers.workspace = true

[lints]
workspace = true
