[package]
name = "iota-synthetic-ingestion"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
anyhow.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tracing.workspace = true

# internal dependencies
iota-storage.workspace = true
iota-test-transaction-builder.workspace = true
iota-types.workspace = true
simulacrum.workspace = true
telemetry-subscribers.workspace = true

[dev-dependencies]
# external dependencies
tempfile.workspace = true

# internal dependencies
iota-common.workspace = true
