[package]
name = "iota-tool"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[features]
tracing = ["iota-replay/tracing"]

[lints]
workspace = true

[dependencies]
# external dependencies
anemo.workspace = true
anemo-cli = { git = "https://github.com/mystenlabs/anemo.git", rev = "f8b708601d002a75955dafebae4f75628c6f42b4" }
anyhow.workspace = true
bcs.workspace = true
camino.workspace = true
clap.workspace = true
colored.workspace = true
comfy-table = "6.1.3"
csv.workspace = true
eyre.workspace = true
fastcrypto.workspace = true
futures.workspace = true
hex.workspace = true
indicatif.workspace = true
inquire = "0.6.0"
itertools.workspace = true
num_cpus.workspace = true
object_store.workspace = true
prometheus.workspace = true
ron = "0.8.0"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing.workspace = true

# internal dependencies
bin-version.workspace = true
iota-archival.workspace = true
iota-config.workspace = true
iota-core.workspace = true
iota-genesis-builder.workspace = true
iota-grpc-client.workspace = true
iota-json-rpc-types.workspace = true
iota-keys.workspace = true
iota-network.workspace = true
iota-package-dump.workspace = true
iota-protocol-config.workspace = true
iota-replay.workspace = true
iota-sdk.workspace = true
iota-sdk-types.workspace = true
iota-snapshot.workspace = true
iota-storage.workspace = true
iota-tls.workspace = true
iota-types.workspace = true
move-core-types.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true

[dev-dependencies]
# external dependencies
rand.workspace = true

# internal dependencies
iota-common.workspace = true
iota-macros.workspace = true

[package.metadata.cargo-machete]
ignored = [
  "ron", # imported through a declarative macro
  "strum", # imported through a procedural macro
]
