[package]
name = "iota-types"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
base64.workspace = true
bcs.workspace = true
better_any.workspace = true
bincode.workspace = true
byteorder.workspace = true
bytes.workspace = true
derive_more = { workspace = true, default-features = true, features = ["as_ref", "from", "debug", "display"] }
either.workspace = true
enum_dispatch.workspace = true
eyre.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
futures.workspace = true
hex.workspace = true
indexmap.workspace = true
itertools.workspace = true
lru.workspace = true
nonempty.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
passkey-types.workspace = true
proptest = { workspace = true, optional = true }
prost.workspace = true
prost-types.workspace = true
rand.workspace = true
roaring.workspace = true
serde.workspace = true
serde-name = "0.2.1"
serde_json.workspace = true
serde_with.workspace = true
signature.workspace = true
static_assertions.workspace = true
strum.workspace = true
strum_macros.workspace = true
tap.workspace = true
thiserror.workspace = true
tracing.workspace = true

# internal dependencies
iota-macros.workspace = true
iota-proc-macros.workspace = true
iota-protocol-config.workspace = true
iota-sdk-crypto = { workspace = true, features = ["ed25519", "secp256r1", "secp256k1", "passkey"] }
iota-sdk-types = { workspace = true, features = ["serde", "rand", "hash"] }
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
move-vm-profiler.workspace = true
move-vm-test-utils.workspace = true
typed-store-error.workspace = true

# Dependencies that don't compile to wasm32 (networking, metrics, consensus).
# Gated with target cfg so non-wasm builds are unchanged.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# external dependencies
anemo.workspace = true
fastcrypto-tbls.workspace = true
prometheus.workspace = true
tonic.workspace = true

# internal dependencies
iota-network-stack.workspace = true
starfish-config.workspace = true

[dev-dependencies]
# external dependencies
async-trait.workspace = true
bincode.workspace = true
coset.workspace = true
criterion.workspace = true
expect-test.workspace = true
p256.workspace = true
passkey-authenticator.workspace = true
passkey-client.workspace = true
proptest.workspace = true
tokio.workspace = true
url.workspace = true

# internal dependencies
iota-sdk-types = { workspace = true, features = ["proptest"] }

[[bench]]
name = "global_state_hash_bench"
harness = false

[features]
default = []
tracing = ["move-vm-profiler/tracing", "move-vm-test-utils/tracing"]
fuzzing = ["dep:proptest", "iota-sdk-types/proptest", "move-core-types/fuzzing"]
