[package]
name = "simulacrum"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
async-trait.workspace = true
fastcrypto.workspace = true
prometheus.workspace = true
rand.workspace = true
tracing.workspace = true

# internal dependencies
iota-config.workspace = true
iota-execution.workspace = true
iota-node-storage.workspace = true
iota-protocol-config.workspace = true
iota-sdk-types.workspace = true
iota-storage.workspace = true
iota-swarm-config.workspace = true
iota-transaction-checks.workspace = true
iota-types.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
typed-store-error.workspace = true

[lints]
workspace = true
