[package]
name = "starfish-core"
version = "0.1.0"
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
ahash = "0.8.11"
async-trait.workspace = true
base64.workspace = true
bcs.workspace = true
bytes.workspace = true
cfg-if = "1.0.0"
dashmap.workspace = true
enum_dispatch.workspace = true
eyre.workspace = true
fastcrypto.workspace = true
futures.workspace = true
http.workspace = true
itertools.workspace = true
lru.workspace = true
nom = "7.1.3"
parking_lot.workspace = true
prometheus.workspace = true
prost.workspace = true
rand.workspace = true
reed-solomon-simd = { version = "3.0.1" }
rs_merkle.workspace = true
serde.workspace = true
strum_macros.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "net"] }
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tonic-prost = "0.14"
tonic-rustls = "0.3.0"
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

# internal dependencies
iota-common.workspace = true
iota-http.workspace = true
iota-macros.workspace = true
iota-metrics.workspace = true
iota-network-stack.workspace = true
iota-protocol-config.workspace = true
iota-sdk-types = { workspace = true, features = ["serde"] }
iota-tls.workspace = true
starfish-config.workspace = true
typed-store.workspace = true

[dev-dependencies]
# external dependencies
rstest.workspace = true
serial_test.workspace = true
tokio = { workspace = true, features = ["test-util"] }

# internal dependencies
telemetry-subscribers.workspace = true

[build-dependencies]
tonic-build.workspace = true

[package.metadata.cargo-machete]
ignored = [
  "tonic-prost", # referenced from code generated by build.rs
]
