[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# external dependencies
anyhow = "1.0"
bcs = "0.1"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
dirs = "6.0"
fastcrypto = "0.1"
iota-sdk-types = { git = "https://github.com/iotaledger/iota-rust-sdk", rev = "95964e2c1d2f8a196e7a0b9c3da0f915d2603c87" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.46.1", features = ["time"] }

# internal dependencies
iota-keys = { path = "../../../crates/iota-keys" }
iota-sdk = { path = "../../../crates/iota-sdk" }
iota-types = { path = "../../../crates/iota-types" }
move-core-types = { path = "../../../external-crates/move/crates/move-core-types" }
