[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# external dependencies
anyhow = "1.0"
bcs = "0.1"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
dirs = "6.0"
fastcrypto = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["time"] }

# internal dependencies
iota-keys = { path = "../../../crates/iota-keys" }
iota-sdk = { path = "../../../crates/iota-sdk" }
iota-sdk-types = { git = "https://github.com/iotaledger/iota-rust-sdk.git", rev = "f4fc0d1b6d3dc52f81db62a82cefb75d719e14ff" }
iota-types = { path = "../../../crates/iota-types" }
move-core-types = { path = "../../../external-crates/move/crates/move-core-types" }
