[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# external dependencies
anyhow = "1.0"
bcs = "0.1"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
dirs = "6.0"
fastcrypto = "0.1"
serde = { version = "1.0", features = ["derive"] }
# Pinned: time 0.3.48 introduces a coherence conflict with rcgen 0.13.2 that
# fails to compile. Declared directly (it is otherwise a transitive dep via
# rcgen) so the constraint holds without a checked-in Cargo.lock.
time = "=0.3.47"
tokio = { version = "1.49.0", features = ["time"] }

# internal dependencies
iota-keys = { path = "../../../crates/iota-keys" }
iota-sdk = { path = "../../../crates/iota-sdk" }
iota-sdk-types = { git = "https://github.com/iotaledger/iota-rust-sdk.git", rev = "4e685468c6e589f2701f4ffd64699f60c430f6da" }
iota-types = { path = "../../../crates/iota-types" }
