[package]
name = "move-docgen-tests"
version = "0.1.0"
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
tempfile.workspace = true

# internal dependencies
move-command-line-common.workspace = true
move-docgen.workspace = true
move-package.workspace = true

[dev-dependencies]
datatest-stable.workspace = true

[[test]]
name = "testsuite"
harness = false
