[package]
name = "move-model-2"
version = "0.1.0"
authors = ["The Move Contributors"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
bcs.workspace = true
indexmap.workspace = true

# internal dependencies
move-binary-format.workspace = true
move-bytecode-source-map.workspace = true
move-compiler.workspace = true
move-core-types.workspace = true
move-ir-types.workspace = true
move-symbol-pool.workspace = true
