[package]
name = "move-stdlib"
version = "0.1.1"
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Move stdlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# external dependencies
anyhow.workspace = true
walkdir.workspace = true

# internal dependencies
move-command-line-common.workspace = true
move-core-types.workspace = true
move-docgen.workspace = true
move-package.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
testing = []
