[package]
name = "tree-sitter-move"
version = "0.0.1"
categories = ["parsing", "text-editors"]
edition = "2018"
keywords = ["incremental", "parsing", "move"]
license = "MIT"
repository = "https://github.com/tree-sitter/tree-sitter-move"
description = "move grammar for the tree-sitter parsing library"
build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
